# groupchat_travel

backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: flight_agent.py  hello_agent.py  lead_agent.py  mock_flights.py  music_agent.py
backend/app/tools/: flight_tool.py  music_tool.py  weather_tool.py
